fixing faq and testimonial icons centre alignment, updating faq text

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -91,7 +91,7 @@ header h1, h2, h4 {
     position: absolute;
     z-index: 2;
     top: -1.5em;
-    left: 50%;
+    left: 47%;
     margin-left: -16px;
     border-radius: 100%;
     background: #f5f5f5;
@@ -103,7 +103,7 @@ header h1, h2, h4 {
     position: absolute;
     z-index: 2;
     top: -1em;
-    left: 50%;
+    left: 47%;
     margin-left: -16px;
     border-radius: 100%;
     background: #f5f5f5;
